--- a/TLRestAPI/appsettings.json
+++ b/TLRestAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EmployeeAppCon": " Data Source=mytestdb.database.windows.net; Initial Catalog=mytestdb;User Id=sa;password=yCjdw1uUXbCi6QFkBjhVfOCbQsIT1vIux6x6lSQZiTr04TxzEA"
+    "EmployeeAppCon": " Data Source=.; Initial Catalog=mydstest;User Id=sa;password=P@ssw0rd$#"
   },
 
   "Logging": {
